fix: filters overlapping create item popup
[Fixes #54305572]

--- a/app/assets/stylesheets/corespring-ng-components/multi-select.less
+++ b/app/assets/stylesheets/corespring-ng-components/multi-select.less
@@ -2,7 +2,7 @@
 
 .multi-select {
   position: relative;
-  z-index: 100003;
+  z-index: 3;
   padding: 0px;
   .items {
 
@@ -19,7 +19,7 @@
 
   .chooser {
     position: absolute;
-    z-index: 100006;
+    z-index: 6;
     padding: 5px;
     border-radius: 5px;
     -moz-border-radius: 5px;
